fixed overflowing image

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -339,3 +339,58 @@ div.wrapper.group h3 {
 .fullWidth {
   width: 100%;
 }
+.carDetailsHeader div.wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 2vh 6vw;
+  font-size: 1.2rem;
+}
+.carDetails {
+  flex: 1;
+  display:flex;
+  flex-direction: column;
+}
+.carDetailsContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.carDetailsContent div.wrapper {
+  flex: 1;
+  width: 100%;
+  display: flex;
+}
+.carDetailsContentGrid {
+  max-height: 400px;
+  width:100%;
+  margin-top: 24px;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+}
+.leftContent, .rightContent {
+  border: 1px solid black;
+}
+.leftContent {
+  width: 100%;
+  overflow:hidden;
+  display: flex;
+}
+.leftContent img {
+  width: 100%;
+  height:auto;
+  object-fit: cover;
+  object-position: center;
+}
+.rightContent {
+  height: 100%;
+  padding: 2.5vw;
+}
+.rightContent h1 {
+  font-size: 3rem;
+}
+.carDetailsHeader {
+  height: 70px;
+  background-color: #F5F5F5;
+  color: #454545;
+}
